Refactor controller tests to call services directly
Remove ConfigurationContextExtension and the controller/proxy layer from
15 test files so they test the service directly, eliminating slow
proxy mechanism overhead. Rename test files from *ControllerTest to
*ServiceTest to reflect what they actually test.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>